--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   permission_handler: ^12.0.0+1
   dio: ^5.3.0
   open_file: ^3.3.2
+  shimmer: ^3.0.0
+  get_it: ^8.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
