--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   open_file: ^3.3.2
   shimmer: ^3.0.0
   get_it: ^8.0.3
+  logger: ^2.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
